test/files/neg/t6048.check
t6048.scala:3: warning: unreachable code
    case _ if false => x // unreachable
                       ^
t6048.scala:8: warning: unreachable code
    case _ if false => x // unreachable
                       ^
t6048.scala:14: warning: unreachable code
    case 5 if true  => x // unreachable
                       ^
error: No warnings can be incurred under -Xfatal-warnings.
three warnings found
one error found
